Contract Configurator 0.7.1
- Better support for spawning landed Kerbals in SpawnKerbal
- Added support for Duration datatype in expressions.
- Improvements to location debug window.
- Support for notes in most contract parameters.
- Minor bug fixes.

Contract Configurator 0.7.0
- Support for expressions in config nodes.
    - All config node attributes can now contain expressions (see wiki for syntax details).
    - Added special expression function/methods for Vessel
    - Added special expression function/methods for CelestialBody
    - Added special expression function/methods for Kerbal (ProtoCrewMember)
    - Added special expression function/methods for Lists
    - Added special expression function/methods for Enumerations
- New debugging window feature - contract balancing mode.
- Added HasCrewCapacity parameter.
- Added VesseLDestroyed parameter.
- Added SpawnPassenger behaviour.
- Added version check to contract groups.
- Major changes to CollectScience parameter.
- WaypointGenerate now supports a PQS offset - allows setting waypoint using a special offset from the PQSCity location.
- Added minTerrainAltitude and maxTerrainAltitude to ReachState.
- Fixed HasAntenna to work with omnis without having activeVessel attribute set (thanks Eiktyrner).
- Clean up "Input is null" warning messages from stock.
- Lots and lots of minor bug fixes.

Contract Configurator 0.6.7
- Added support for completeInSequence attribute (all parameters).
- The state of vessel parameters may now be "transferred" via EVA Kerbals.  This allows a ship to land on the Mun, have the Kerbal EVA from the ship to a new ship, and have the new ship still complete the "land on Mun" parameter.
- Minor bug fixes.

Contract Configurator 0.6.6
- Changed to MIT license.
- Performance fixes for stock contracts app (mainly affects contracts with lots and lots of parameters.
- Bundled MiniAVC (1.0.3).
- Minor bug fixes.

Contract Configurator 0.6.5